# project-firmament

./: .gitignore  LICENSE  README.md  Test.fc  dune-project  expr.ml.bak  func.opam
fcc/: dune  main.ml
lib/: dune  expr.ml  fctype.ml  impl.ml  interpret.ml  lex.ml  parse.ml  stmt.ml  table.ml
